# specter2-embed-server

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  preload.py  pyproject.toml
app/: main.py
