[project]
name = "specter2-embed-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adapters>=1.2.0",
    "fastapi>=0.122.0",
    "pydantic>=2.12.5",
    "torch>=2.9.1",
    "transformers>=4.51.3",
    "uvicorn>=0.38.0",
]
